--- a/P000547.opf/layers/v001/Pagination.yml
+++ b/P000547.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 983878cb88ad45679bf25c0cf5053a08
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   df7c56a8512a4c99b00ade91c6c013d2:
