--- a/P000547.opf/meta.yml
+++ b/P000547.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000547
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-16 15:46:09.848898
 source_metadata:
   id: bdr:W942
   title: དགེ་ལྡན་ལེགས་བཤད་པདྨ་དཀར་པོའི་ཆུན་པོའི་ཆུན་པོའི་འགྲེལ་པ་ཉི་མའི་འོད་ཟེར།
@@ -14,3 +14,5 @@ source_metadata:
       volume_number: 1
       total_pages: 196
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
